--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,17 @@ dependencies {
     testImplementation "org.projectlombok:lombok:${lombokVersion}"
     testImplementation "com.squareup.okhttp3:mockwebserver:${okHttp3Version}"
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
-        exclude group: 'junit', module: 'junit'
+        exclude group: "junit", module: "junit"
     }
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}"
     testImplementation "org.junit.jupiter:junit-jupiter:${junitJupiterVersion}"
     testImplementation "com.google.guava:guava:31.1-jre"
     testImplementation "org.yaml:snakeyaml:1.26"
+    testImplementation "org.spockframework:spock-core:${spockVersion}"
+    testImplementation "org.codehaus.groovy:groovy-all:${groovyVersion}"
+    testImplementation "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
+    testImplementation "org.mock-server:mockserver-client-java:${mockServerVersion}"
+    testImplementation "org.mock-server:mockserver-netty:${mockServerVersion}"
 }
 
 java {
