--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ mockServerVersion=5.13.2
 springBootVersion=3.0.4
 yahooFinanceApiVersion=3.17.0
 okHttp3Version=4.10.0
+groovyVersion=4.0.2
+spockVersion=2.3-groovy-4.0
